[package]
name = "lib_config"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/MinAndDev/lib_config"
readme = "README.md"
keywords = ["config", "json"]
categories = ["config"]
description = "Simple and intuitive API to create and access JSON config files"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
directories = "5.0.0"

[profile.release]
opt-level = 3
overflow-checks = false
