[package]
name = "lib_config"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MinAndDev/lib_config"
readme = "README.md"
keywords = ["config", "json"]
categories = ["config"]
description = "Simple and intuitive API to create and access JSON config files"

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
directories = "5.0.0"
thiserror = "1.0.40"

[profile.release]
opt-level = 3
overflow-checks = false
